# GAb_BOT

./: .env  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py  settings.py
app/messages/: game_messages.py  start_message.py
app/models/: game.py
app/routers/: categories_menu.py  epic_games_store.py  free_games.py  free_loot.py  platforms_menu.py  test.py  utils.py
app/services/: Base_API.py  Database_API.py  GAb_API.py  Games_API.py  Utils_API.py
app/states/: categories_states.py  games_states.py  loot_states.py  platforms_states.py
