[tool.poetry]
name = "gab-bot"
version = "0.1.0"
description = "GAb Bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0b7"
aiohttp = "^3.8.4"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}

[tool.poetry.scripts]
main-run = 'app.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
